<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AlarmDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="onSaveClick"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="176dp">

        <TextView
            android:id="@+id/idADHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_details_header"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/idADAlarmTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/idADAlarmTimeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_details_time"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/idADTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="time"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/idADActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ad_active" />

            <CheckBox
                android:id="@+id/idADRepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ad_repeat" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/idADSunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ad_sunday" />

        <CheckBox
            android:id="@+id/idADMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ad_monday" />

        <CheckBox
            android:id="@+id/idADTuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ad_tuesday" />

        <CheckBox
            android:id="@+id/idADWednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ad_wednesday" />

        <CheckBox
            android:id="@+id/idADThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ad_thursday" />

        <CheckBox
            android:id="@+id/idADFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ad_friday" />

        <CheckBox
            android:id="@+id/idADSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ad_saturday" />

        <Button
            android:id="@+id/idADSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSaveClick"
            android:text="@string/alarm_details_save_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>